[gd_scene load_steps=16 format=3 uid="uid://dqnjrk008ccpy"]

[ext_resource type="Script" path="res://main.gd" id="1_4hx5p"]
[ext_resource type="Script" path="res://PreviewController.gd" id="2_rsc0c"]
[ext_resource type="AudioStream" uid="uid://bii3beqwflmd" path="res://TRMPT65.wav" id="3_6p5u3"]
[ext_resource type="Script" path="res://PianoKeys.gd" id="3_132ml"]
[ext_resource type="Script" path="res://Piano.gd" id="3_mh03t"]
[ext_resource type="Script" path="res://chart_view.gd" id="4_rrlxc"]
[ext_resource type="AudioStream" uid="uid://bbf50lmoh3a53" path="res://RS.WAV" id="4_wfwxx"]
[ext_resource type="Script" path="res://Chart.gd" id="5_yhpph"]
[ext_resource type="Script" path="res://Settings.gd" id="6_2cfeh"]
[ext_resource type="PackedScene" uid="uid://u1i3jv8qhy1e" path="res://text_field.tscn" id="6_hqpqp"]
[ext_resource type="PackedScene" uid="uid://bu6gxk0umr8do" path="res://number_field.tscn" id="7_6mp3m"]
[ext_resource type="Script" path="res://LyricsEditor.gd" id="9_srvtg"]
[ext_resource type="Script" path="res://ColorPreview.gd" id="10_14v0o"]
[ext_resource type="Texture2D" uid="uid://by8ljxwwbg8ph" path="res://metronome.svg" id="11_maqbd"]

[sub_resource type="Theme" id="Theme_eswg4"]
default_font_size = 14

[node name="Main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_eswg4")
theme_override_constants/separation = 0
script = ExtResource("1_4hx5p")

[node name="PreviewController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_rsc0c")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_6p5u3")
volume_db = -3.0
max_polyphony = 16

[node name="MetronomePlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_wfwxx")

[node name="NewChartConfirm" type="ConfirmationDialog" parent="."]
title = "You Sure?"
position = Vector2i(200, 200)
size = Vector2i(234, 123)
unresizable = true
dialog_text = "Really make a new TMB and discard any unsaved changes?"
dialog_autowrap = true

[node name="CopyConfirm" type="ConfirmationDialog" parent="."]
title = "You Sure?"
position = Vector2i(200, 200)
size = Vector2i(234, 192)
unresizable = true
dialog_text = "Anything that's already there will be deleted.

Notes with tails going into or out of the section might end up overlapping other notes."
dialog_autowrap = true

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Load Chart"
size = Vector2i(600, 360)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.tmb")

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save Chart"
size = Vector2i(600, 360)
ok_button_text = "Save"
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.tmb")

[node name="Instructions" type="AcceptDialog" parent="."]
title = "Usage"
position = Vector2i(200, 48)
size = Vector2i(600, 537)
dialog_text = "Click in the chart view to create a note. Click on the piano to hear pitches for reference.

Drag a note by its start to change the timing, its tail to change its pitch, and its end to change its length and/or turn it into a slide. Middle-click it to delete it. With \"propagate slide changes\" enabled, hold Alt when dragging to break a note away from its neighbor. Note too short to easily grab the pitch handle? Hold Shift to bring it to the front.

On saving, the chart's trackRef field is automatically populated with the directory it was saved to. Keep this in mind if using a working folder other than the one the chart is destined for. You can hold Shift when clicking Save Chart to bypass the \"Save As\" dialog.

Preview timing can be wonky because it can only update at the refresh rate of your monitor. gloat all you like, 144hz bougies


Created with Godot 4 by twi — twitter/@towaii — github/towai
I'm in the Trombone Champ Modding Discord if you have issues or potential improvements, or submit them as a GitHub issue."
dialog_autowrap = true

[node name="PianoRoll" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(360, 270)
layout_mode = 2
offset_right = 1280.0
offset_bottom = 396.0
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Piano" type="Control" parent="PianoRoll"]
custom_minimum_size = Vector2i(144, 0)
layout_mode = 2
anchors_preset = 0
offset_right = 144.0
offset_bottom = 396.0
mouse_filter = 1
script = ExtResource("3_mh03t")

[node name="Keys" type="VBoxContainer" parent="PianoRoll/Piano"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("3_132ml")

[node name="Button" type="Button" parent="PianoRoll/Piano"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "< >"

[node name="ChartView" type="ScrollContainer" parent="PianoRoll"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 144.0
offset_right = 1280.0
offset_bottom = 396.0
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0
script = ExtResource("4_rrlxc")

[node name="Chart" type="Control" parent="PianoRoll/ChartView"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(300, 0)
layout_mode = 2
anchors_preset = 0
offset_right = 300.0
offset_bottom = 388.0
size_flags_vertical = 3
script = ExtResource("5_yhpph")

[node name="LyricsEditor" type="Control" parent="PianoRoll/ChartView/Chart"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_srvtg")

[node name="Settings" type="PanelContainer" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2i(0, 144)
layout_mode = 2
offset_top = 396.0
offset_right = 1280.0
offset_bottom = 540.0
script = ExtResource("6_2cfeh")

[node name="MarginC" type="MarginContainer" parent="Settings"]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 144.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxC" type="HBoxContainer" parent="Settings/MarginC"]
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 1275.0
offset_bottom = 139.0

[node name="Buttons" type="VBoxContainer" parent="Settings/MarginC/HBoxC"]
layout_mode = 2
offset_right = 110.0
offset_bottom = 134.0

[node name="ViewSwitcher" type="Button" parent="Settings/MarginC/HBoxC/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(110, 0)
layout_mode = 2
offset_right = 110.0
offset_bottom = 28.0
size_flags_vertical = 2
text = "Editor Settings"

[node name="LoadChart" type="Button" parent="Settings/MarginC/HBoxC/Buttons"]
layout_mode = 2
offset_top = 42.0
offset_right = 110.0
offset_bottom = 70.0
text = "Load Chart"

[node name="SaveChart" type="Button" parent="Settings/MarginC/HBoxC/Buttons"]
layout_mode = 2
offset_top = 74.0
offset_right = 110.0
offset_bottom = 102.0
text = "Save Chart"

[node name="NewChart" type="Button" parent="Settings/MarginC/HBoxC/Buttons"]
layout_mode = 2
offset_top = 106.0
offset_right = 110.0
offset_bottom = 134.0
text = "New Chart"

[node name="ChartInfo" type="HBoxContainer" parent="Settings/MarginC/HBoxC"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 114.0
offset_right = 1229.0
offset_bottom = 134.0
size_flags_horizontal = 3

[node name="SongInfo" type="VFlowContainer" parent="Settings/MarginC/HBoxC/ChartInfo"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 11.0
offset_right = 489.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6

[node name="Title" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo" instance=ExtResource("6_hqpqp")]
layout_mode = 2
offset_left = 40.0
offset_right = 234.0
json_key = "name"
field_name = "Title"

[node name="ShortTitle" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo" instance=ExtResource("6_hqpqp")]
layout_mode = 2
offset_top = 49.0
offset_right = 234.0
offset_bottom = 85.0
size_flags_vertical = 6
json_key = "shortName"
field_name = "Short Title"

[node name="Author" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo" instance=ExtResource("6_hqpqp")]
layout_mode = 2
offset_left = 22.0
offset_top = 98.0
offset_right = 234.0
offset_bottom = 134.0
json_key = "author"
field_name = "Author"

[node name="Genre" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo" instance=ExtResource("6_hqpqp")]
layout_mode = 2
offset_left = 272.0
offset_right = 478.0
json_key = "genre"
field_name = "Genre"

[node name="Description" type="TextEdit" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(240, 0)
layout_mode = 2
offset_left = 238.0
offset_top = 40.0
offset_right = 478.0
offset_bottom = 134.0
size_flags_vertical = 3
placeholder_text = "Description"
wrap_mode = 1

[node name="SongInfo2" type="VFlowContainer" parent="Settings/MarginC/HBoxC/ChartInfo"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 504.0
offset_right = 857.0
offset_bottom = 134.0
size_flags_horizontal = 2
theme_override_constants/v_separation = 8

[node name="Length" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo2" instance=ExtResource("7_6mp3m")]
layout_mode = 2
offset_left = 5.0
offset_right = 181.0
offset_bottom = 39.0
json_key = "endpoint"
field_name = "Length (beats)"
min_value = 0
max_value = 9999

[node name="Tempo" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo2" instance=ExtResource("7_6mp3m")]
layout_mode = 2
offset_left = 55.0
offset_top = 47.0
offset_right = 181.0
offset_bottom = 86.0
json_key = "tempo"
field_name = "Tempo"
min_value = 0
max_value = 999

[node name="TimeSig" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo2" instance=ExtResource("7_6mp3m")]
layout_mode = 2
offset_top = 94.0
offset_right = 181.0
offset_bottom = 133.0
json_key = "timesig"
field_name = "Time Signature"
min_value = 0
max_value = 16

[node name="Year" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo2" instance=ExtResource("7_6mp3m")]
layout_mode = 2
offset_left = 243.0
offset_right = 353.0
offset_bottom = 39.0
json_key = "year"
field_name = "Year"
min_value = -9999
max_value = 9999

[node name="Diff" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo2" instance=ExtResource("7_6mp3m")]
layout_mode = 2
offset_left = 213.0
offset_top = 47.0
offset_right = 353.0
offset_bottom = 86.0
json_key = "difficulty"
field_name = "Difficulty"
min_value = 0
max_value = 10

[node name="NoteSpacing" parent="Settings/MarginC/HBoxC/ChartInfo/SongInfo2" instance=ExtResource("7_6mp3m")]
layout_mode = 2
offset_left = 185.0
offset_top = 94.0
offset_right = 353.0
offset_bottom = 133.0
json_key = "savednotespacing"
field_name = "Note Spacing"
min_value = 0
max_value = 480

[node name="ColorSettings" type="VBoxContainer" parent="Settings/MarginC/HBoxC/ChartInfo"]
layout_mode = 2
offset_left = 1008.0
offset_right = 1115.0
offset_bottom = 134.0

[node name="Colors" type="HBoxContainer" parent="Settings/MarginC/HBoxC/ChartInfo/ColorSettings"]
layout_mode = 2
offset_right = 107.0
offset_bottom = 32.0

[node name="StartColor" type="ColorPickerButton" parent="Settings/MarginC/HBoxC/ChartInfo/ColorSettings/Colors"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(32, 32)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.913725, 0.188235, 0.270588, 1)
edit_alpha = false

[node name="EndColor" type="ColorPickerButton" parent="Settings/MarginC/HBoxC/ChartInfo/ColorSettings/Colors"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(32, 32)
layout_mode = 2
offset_left = 36.0
offset_right = 68.0
offset_bottom = 32.0
color = Color(1, 0.964706, 0.329412, 1)
edit_alpha = false

[node name="UseColors" type="CheckBox" parent="Settings/MarginC/HBoxC/ChartInfo/ColorSettings"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 36.0
offset_right = 107.0
offset_bottom = 84.0
text = "Use custom
note colors"

[node name="ColorPreview" type="Control" parent="Settings/MarginC/HBoxC/ChartInfo/ColorSettings"]
layout_mode = 2
anchors_preset = 0
offset_top = 88.0
offset_right = 107.0
offset_bottom = 134.0
size_flags_vertical = 3
script = ExtResource("10_14v0o")

[node name="EditSettings" type="VFlowContainer" parent="Settings/MarginC/HBoxC"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 114.0
offset_right = 565.0
offset_bottom = 134.0
size_flags_horizontal = 3

[node name="ZoomEntry" type="HBoxContainer" parent="Settings/MarginC/HBoxC/EditSettings"]
layout_mode = 2
offset_right = 232.0
offset_bottom = 28.0

[node name="Label" type="Label" parent="Settings/MarginC/HBoxC/EditSettings/ZoomEntry"]
layout_mode = 2
offset_top = 2.0
offset_right = 43.0
offset_bottom = 25.0
text = "Zoom:"

[node name="ZoomLevel" type="HSlider" parent="Settings/MarginC/HBoxC/EditSettings/ZoomEntry"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 47.0
offset_top = 6.0
offset_right = 182.0
offset_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "1"
min_value = 0.5
max_value = 3.0
step = 0.05
value = 1.0

[node name="ResetButton" type="Button" parent="Settings/MarginC/HBoxC/EditSettings/ZoomEntry"]
layout_mode = 2
offset_left = 186.0
offset_right = 232.0
offset_bottom = 28.0
text = "Reset"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginC/HBoxC/EditSettings"]
layout_mode = 2
offset_top = 32.0
offset_right = 232.0
offset_bottom = 60.0

[node name="TimeSnapChk" type="CheckBox" parent="Settings/MarginC/HBoxC/EditSettings/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 24.0
offset_bottom = 28.0
button_pressed = true

[node name="TimingSnap" type="SpinBox" parent="Settings/MarginC/HBoxC/EditSettings/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(204, 0)
layout_mode = 2
offset_left = 28.0
offset_right = 232.0
offset_bottom = 28.0
min_value = 1.0
max_value = 12.0
value = 4.0
alignment = 2
prefix = "Timing snap: 1/"
suffix = "beats"

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/MarginC/HBoxC/EditSettings"]
layout_mode = 2
offset_top = 64.0
offset_right = 232.0
offset_bottom = 92.0

[node name="PitchSnapChk" type="CheckBox" parent="Settings/MarginC/HBoxC/EditSettings/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 24.0
offset_bottom = 28.0
button_pressed = true

[node name="PitchSnap" type="SpinBox" parent="Settings/MarginC/HBoxC/EditSettings/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(204, 0)
layout_mode = 2
offset_left = 28.0
offset_right = 232.0
offset_bottom = 28.0
min_value = 1.0
max_value = 12.0
value = 1.0
alignment = 2
prefix = "Pitch snap: 1/"
suffix = "semitones"

[node name="DrawMicrotones" type="CheckBox" parent="Settings/MarginC/HBoxC/EditSettings"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 96.0
offset_right = 232.0
offset_bottom = 124.0
text = "Draw Microtones"

[node name="DootToggle" type="CheckBox" parent="Settings/MarginC/HBoxC/EditSettings"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 236.0
offset_right = 451.0
offset_bottom = 28.0
button_pressed = true
text = "Doot on pitch change"

[node name="PropagateChanges" type="CheckBox" parent="Settings/MarginC/HBoxC/EditSettings"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 236.0
offset_top = 32.0
offset_right = 451.0
offset_bottom = 60.0
button_pressed = true
text = "Propagate changes in slides"

[node name="ShowMouseTargets" type="CheckBox" parent="Settings/MarginC/HBoxC/EditSettings"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 236.0
offset_top = 64.0
offset_right = 451.0
offset_bottom = 92.0
text = "Outline mouse targets"

[node name="RefreshButton" type="Button" parent="Settings/MarginC/HBoxC/EditSettings"]
visible = false
layout_mode = 2
offset_left = 236.0
offset_top = 106.0
offset_right = 451.0
offset_bottom = 134.0
size_flags_vertical = 10
text = "Force note refresh"

[node name="SectionSelection" type="VBoxContainer" parent="Settings/MarginC/HBoxC"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 641.0
offset_right = 824.0
offset_bottom = 134.0
size_flags_horizontal = 6

[node name="HBox" type="HBoxContainer" parent="Settings/MarginC/HBoxC/SectionSelection"]
layout_mode = 2
offset_right = 183.0
offset_bottom = 28.0
alignment = 2

[node name="Label" type="Label" parent="Settings/MarginC/HBoxC/SectionSelection/HBox"]
layout_mode = 2
offset_left = 14.0
offset_top = 2.0
offset_right = 104.0
offset_bottom = 25.0
text = "Section Start:"

[node name="SectionStart" type="SpinBox" parent="Settings/MarginC/HBoxC/SectionSelection/HBox"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 108.0
offset_right = 183.0
offset_bottom = 28.0

[node name="HBox2" type="HBoxContainer" parent="Settings/MarginC/HBoxC/SectionSelection"]
layout_mode = 2
offset_top = 32.0
offset_right = 183.0
offset_bottom = 60.0
alignment = 2

[node name="Label" type="Label" parent="Settings/MarginC/HBoxC/SectionSelection/HBox2"]
layout_mode = 2
offset_top = 2.0
offset_right = 104.0
offset_bottom = 25.0
text = "Section Length:"

[node name="SectionLength" type="SpinBox" parent="Settings/MarginC/HBoxC/SectionSelection/HBox2"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 108.0
offset_right = 183.0
offset_bottom = 28.0
min_value = 1.0
value = 1.0

[node name="HBox4" type="HBoxContainer" parent="Settings/MarginC/HBoxC/SectionSelection"]
layout_mode = 2
offset_top = 68.0
offset_right = 183.0
offset_bottom = 98.0
size_flags_vertical = 6
alignment = 2

[node name="MetroIcon" type="TextureRect" parent="Settings/MarginC/HBoxC/SectionSelection/HBox4"]
layout_mode = 2
offset_right = 30.0
offset_bottom = 30.0
texture = ExtResource("11_maqbd")
stretch_mode = 2

[node name="MetroChk" type="CheckBox" parent="Settings/MarginC/HBoxC/SectionSelection/HBox4"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 34.0
offset_right = 117.0
offset_bottom = 30.0
size_flags_horizontal = 3

[node name="PreviewButton" type="Button" parent="Settings/MarginC/HBoxC/SectionSelection/HBox4"]
layout_mode = 2
offset_left = 121.0
offset_right = 183.0
offset_bottom = 30.0
text = "Preview"

[node name="HBox3" type="HBoxContainer" parent="Settings/MarginC/HBoxC/SectionSelection"]
layout_mode = 2
offset_top = 106.0
offset_right = 183.0
offset_bottom = 134.0
alignment = 2

[node name="CopyButton" type="Button" parent="Settings/MarginC/HBoxC/SectionSelection/HBox3"]
layout_mode = 2
offset_left = 40.0
offset_right = 104.0
offset_bottom = 28.0
text = "Copy to:"

[node name="CopyTarget" type="SpinBox" parent="Settings/MarginC/HBoxC/SectionSelection/HBox3"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 108.0
offset_right = 183.0
offset_bottom = 28.0

[node name="LyricsTools" type="VBoxContainer" parent="Settings/MarginC/HBoxC"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 901.0
offset_right = 1229.0
offset_bottom = 134.0
size_flags_horizontal = 3

[node name="ShowLyrics" type="CheckBox" parent="Settings/MarginC/HBoxC/LyricsTools"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 180.0
offset_right = 328.0
offset_bottom = 28.0
size_flags_horizontal = 8
size_flags_vertical = 2
text = "Show lyrics editor"

[node name="AddLyric" type="Button" parent="Settings/MarginC/HBoxC/LyricsTools"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 200.0
offset_top = 37.0
offset_right = 328.0
offset_bottom = 65.0
size_flags_horizontal = 8
text = "Add new lyric at..."

[node name="LyricBar" type="SpinBox" parent="Settings/MarginC/HBoxC/LyricsTools"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 252.313
offset_top = 69.0
offset_right = 328.0
offset_bottom = 97.0
size_flags_horizontal = 8
alignment = 2
prefix = "Beat"

[node name="CopyLyrics" type="Button" parent="Settings/MarginC/HBoxC/LyricsTools"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 106.0
offset_right = 133.0
offset_bottom = 134.0
size_flags_horizontal = 0
size_flags_vertical = 10
text = "Copy section lyrics"

[node name="HelpButton" type="Button" parent="Settings/MarginC/HBoxC"]
layout_mode = 2
offset_left = 1233.0
offset_right = 1270.0
offset_bottom = 134.0
size_flags_horizontal = 8
tooltip_text = "Info & Usage"
text = "   ?   "

[connection signal="chart_loaded" from="." to="PianoRoll/ChartView/Chart/LyricsEditor" method="_on_chart_loaded"]
[connection signal="confirmed" from="NewChartConfirm" to="." method="_on_new_chart_confirmed"]
[connection signal="confirmed" from="CopyConfirm" to="." method="_on_copy_confirmed"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="pressed" from="PianoRoll/Piano/Button" to="PianoRoll/Piano" method="_on_button_pressed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/Buttons/ViewSwitcher" to="Settings" method="_on_view_switcher_pressed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/Buttons/LoadChart" to="." method="_on_load_chart_pressed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/Buttons/SaveChart" to="." method="_on_save_chart_pressed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/Buttons/NewChart" to="." method="_on_new_chart_pressed"]
[connection signal="text_changed" from="Settings/MarginC/HBoxC/ChartInfo/SongInfo/Description" to="." method="_on_description_text_changed"]
[connection signal="color_changed" from="Settings/MarginC/HBoxC/ChartInfo/ColorSettings/Colors/StartColor" to="Settings/MarginC/HBoxC/ChartInfo/ColorSettings/ColorPreview" method="queue_redraw" unbinds=1]
[connection signal="color_changed" from="Settings/MarginC/HBoxC/ChartInfo/ColorSettings/Colors/EndColor" to="Settings/MarginC/HBoxC/ChartInfo/ColorSettings/ColorPreview" method="queue_redraw" unbinds=1]
[connection signal="value_changed" from="Settings/MarginC/HBoxC/EditSettings/ZoomEntry/ZoomLevel" to="Settings" method="_on_zoom_level_changed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/EditSettings/ZoomEntry/ResetButton" to="Settings" method="_on_zoom_reset_pressed"]
[connection signal="value_changed" from="Settings/MarginC/HBoxC/EditSettings/HBoxContainer2/PitchSnap" to="PianoRoll/ChartView" method="_on_pitch_snap_value_changed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/EditSettings/DrawMicrotones" to="PianoRoll/ChartView" method="queue_redraw"]
[connection signal="toggled" from="Settings/MarginC/HBoxC/EditSettings/DootToggle" to="PianoRoll/ChartView/Chart" method="_on_doot_toggle_toggled"]
[connection signal="toggled" from="Settings/MarginC/HBoxC/EditSettings/PropagateChanges" to="PianoRoll/ChartView/Chart" method="_on_show_targets_toggled"]
[connection signal="toggled" from="Settings/MarginC/HBoxC/EditSettings/ShowMouseTargets" to="PianoRoll/ChartView/Chart" method="_on_show_targets_toggled"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/EditSettings/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="value_changed" from="Settings/MarginC/HBoxC/SectionSelection/HBox/SectionStart" to="Settings" method="_on_section_start_value_changed"]
[connection signal="value_changed" from="Settings/MarginC/HBoxC/SectionSelection/HBox2/SectionLength" to="Settings" method="_on_section_length_value_changed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/SectionSelection/HBox4/PreviewButton" to="PreviewController" method="_do_preview"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/SectionSelection/HBox3/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="value_changed" from="Settings/MarginC/HBoxC/SectionSelection/HBox3/CopyTarget" to="Settings" method="_on_copy_target_value_changed"]
[connection signal="toggled" from="Settings/MarginC/HBoxC/LyricsTools/ShowLyrics" to="PianoRoll/ChartView/Chart/LyricsEditor" method="_on_show_lyrics_toggled"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/LyricsTools/AddLyric" to="PianoRoll/ChartView/Chart/LyricsEditor" method="_on_add_lyric_pressed"]
[connection signal="value_changed" from="Settings/MarginC/HBoxC/LyricsTools/LyricBar" to="PianoRoll/ChartView/Chart/LyricsEditor" method="_on_lyric_bar_value_changed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/LyricsTools/CopyLyrics" to="PianoRoll/ChartView/Chart/LyricsEditor" method="_on_copy_lyrics_pressed"]
[connection signal="pressed" from="Settings/MarginC/HBoxC/HelpButton" to="." method="_on_help_button_pressed"]
